<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">


<LinearLayout
    android:id="@+id/linear_bg"
    android:background="@drawable/background_border"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/layout_margin20">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center">

        <ImageView
            android:src="@drawable/logoandroid"
            android:scaleType="fitEnd"
            android:layout_height="500px"
            android:layout_width="500px"
            android:layout_gravity="center"/>

        <TextView
            android:text="Frame Layout"
            android:textSize="60px"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/framelayout"
        android:layout_margin="10sp" />


</LinearLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/btnPre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previousBtn"
        android:onClick="goToPreviousView"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextBtn"
        android:onClick="goToNextView"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
</LinearLayout>
