<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="Table Layout"
        android:textAlignment="center"
    android:layout_margin="10sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_bg"
        android:background="@drawable/background_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/layout_margin20">


        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow android:paddingTop="10px" android:gravity="center">
            <TextView
                android:id="@+id/textLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LOGIN"
                android:layout_span="2"
                android:textColor="#890000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center" />
        </TableRow>

            <TableRow
            android:layout_marginTop="20dip">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="USERNAME: "
                android:layout_marginLeft="10dip"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1" />
        </TableRow>

            <TableRow
            android:layout_marginTop="20dip">
            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PASSWORD: "
                android:layout_marginLeft="10dip"
                android:textSize="20sp"
                android:textColor="#000000" />
            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1" />
        </TableRow>

            <TableRow android:gravity="center" android:layout_marginTop="20dip">

            <Button android:id="@+id/btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SUBMIT"
                android:onClick="didClickSubmit"/>

        </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tablelayout"
            android:layout_margin="10sp" />


    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnPre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previousBtn"
            android:onClick="goToPreviousView"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nextBtn"
            android:onClick="goToNextView"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>
</LinearLayout>